# crawl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
assets/config/: crawl.toml
assets/etc/: systemd.service
assets/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  crawl-theme.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  rose-pine-dawn.toml  rose-pine.toml  tokyo-night-storm.toml  tokyo-night.toml
config/: crawl.toml
crates/crawl-audio/: Cargo.toml
crates/crawl-audio/src/: lib.rs
crates/crawl-bluetooth/: Cargo.toml
crates/crawl-bluetooth/src/: config.rs  lib.rs
crates/crawl-brightness/: Cargo.toml
crates/crawl-brightness/src/: lib.rs
crates/crawl-cli/: Cargo.toml
crates/crawl-cli/src/: client.rs  logo.rs  main.rs  output.rs
crates/crawl-cli/src/cmd/: audio.rs  bluetooth.rs  daemon.rs  disk.rs  display.rs  media.rs  mod.rs  network.rs  proc.rs  proc_.rs  sysinfo.rs  sysmon.rs  theme.rs  update.rs
crates/crawl-clipboard/: Cargo.toml
crates/crawl-clipboard/src/: lib.rs
crates/crawl-daemon/: Cargo.toml
crates/crawl-daemon/src/: config.rs  daemon.rs  dispatcher.rs  event_bus.rs  main.rs  router.rs  server.rs  sse.rs  state.rs
crates/crawl-daemon/src/services/: audio.rs  bluetooth.rs  display.rs  mod.rs  network.rs  proc.rs  sysinfo.rs  sysmon.rs
crates/crawl-disk/: Cargo.toml
crates/crawl-disk/src/: lib.rs
crates/crawl-display/: Cargo.toml
crates/crawl-display/src/: brightness.rs  config.rs  lib.rs  wallpaper.rs
crates/crawl-display/src/crawlbg/: cache.rs  image.rs  mod.rs  models.rs  outputs.rs  renderer.rs  transition.rs  wayland.rs
crates/crawl-ipc/: Cargo.toml
crates/crawl-ipc/src/: client.rs  error.rs  events.rs  lib.rs  protocol.rs  server.rs  socket.rs  subscription.rs  theme.rs  types.rs
crates/crawl-media/: Cargo.toml
crates/crawl-media/src/: lib.rs
crates/crawl-network/: Cargo.toml
crates/crawl-network/src/: config.rs  ethernet.rs  hotspot.rs  lib.rs  state.rs  wifi.rs
crates/crawl-notify/: Cargo.toml
crates/crawl-notify/src/: lib.rs
crates/crawl-power/: Cargo.toml
crates/crawl-power/src/: lib.rs
crates/crawl-proc/: Cargo.toml
crates/crawl-proc/src/: config.rs  lib.rs
crates/crawl-scheduler/: Cargo.toml
crates/crawl-scheduler/src/: lib.rs
crates/crawl-sysinfo/: Cargo.toml
crates/crawl-sysinfo/src/: config.rs  hardware.rs  lib.rs  session.rs
crates/crawl-sysmon/: Cargo.toml
crates/crawl-sysmon/src/: config.rs  lib.rs
crates/crawl-theme/: Cargo.toml
crates/crawl-theme/src/: cli_cmd_theme.rs  lib.rs  matugen.rs  palette.rs  router_theme.rs  themes.rs
crates/crawl-theme/src/writers/: ghostty.rs  gtk.rs  json.rs  mod.rs  shell.rs
docs/: ARCHITECTURE.md  AUDIO.md  CLI.md  CRAWL_IPC.md  CRAWL_THEME.md  DEVELOPMENT.md  DISPLAY.md  IPC.md  NETWORK.md  PROCESSES.md  PROJECT_STRUCTURE.md  QUICKSHELL.md  SYSINFO.md  SYSMON.md
pkg/: PKGBUILD  crawl.install  install.sh  uninstall.sh  update.sh
systemd/: crawl.service
