[workspace]
members = [
    "crates/crawl-daemon",
    "crates/crawl-cli",
    "crates/crawl-ipc",
    "crates/crawl-sysinfo",
    "crates/crawl-audio",
    "crates/crawl-bluetooth",
    "crates/crawl-display",
    "crates/crawl-network",
    "crates/crawl-proc",
    "crates/crawl-sysmon",
    "crates/crawl-scheduler",
]
resolver = "3"

[workspace.dependencies]
# Internal crates
crawl-ipc = { path = "crates/crawl-ipc" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "1"
color-eyre = "0.6"

# Config
figment = { version = "0.10", features = ["env", "toml"] }
which = "8"

# Display
image = "0.25"
libc = "0.2"
owo-colors = "4"

# D-Bus
zbus = { version = "4", features = ["tokio"] }

# Futures
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-test = "0.4"
pin-project-lite = "0.2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.94.0"
authors = ["Enosh"]
license = "MIT"
repository = "https://github.com/me-osano/crawl"
