[package]
name = "crawl-brightness"
description = "Display brightness control via sysfs backlight"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crawl-ipc  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
