[package]
name = "crawl-cli"
description = "crawl CLI client — talk to crawl-daemon over Unix socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "crawl"
path = "src/main.rs"

[dependencies]
crawl-ipc  = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
color-eyre = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
hyper        = { workspace = true }
hyper-util   = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }
libc        = "0.2"
