[package]
name = "crawl-cli"
description = "Crawl CLI client — talk to crawl-daemon over Unix socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "crawl"
path = "src/main.rs"

[dependencies]
crawl-ipc  = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
color-eyre = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors  = { workspace = true }
once_cell = "1"
term_size = "0.3"
comfy-table = "7"
