[package]
name = "crawl-media"
description = "MPRIS2 media player aggregator via D-Bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crawl-ipc    = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
zbus         = { workspace = true }
futures-util = { workspace = true }
anyhow       = { workspace = true }
