[package]
name = "crawl-sysinfo"
description = "System info aggregator: compositor detection, OS info, display/monitor info"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
crawl-ipc = { workspace = true }