[package]
name = "crawl-sysmon"
description = "CPU, memory and disk monitoring via sysinfo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crawl-ipc  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
sysinfo    = { version = "0.31", features = ["apple-app-store"] }
anyhow     = { workspace = true }
